@@ -1,3 +1,4 @@
+- [2026-02-23 00:25] REFACTOR: 优化poster串行生图参考图逻辑——总管AI参考图与首图风格锚定分离，第1张用总管AI参考图生成，第2张起同时传入总管AI参考图+第1张结果，日志明确输出参考图来源 (Files: src/xhs_agent/services/image_service.py)
 - [2026-02-23 00:20] FEAT: poster风格图片串行生成保持风格一致——第1张生成后将其URL作为参考图传入后续生成请求，确保整组海报视觉风格统一；photo风格保持并发生成 (Files: src/xhs_agent/services/image_service.py)
 - [2026-02-23 00:10] FEAT: 失败通知增加详细错误信息——包含失败阶段（文本生成/提示词生成/图片生成/图片下载/笔记上传）、错误类型、错误详情和账号信息 (Files: src/xhs_agent/services/goal_service.py)
 - [2026-02-23 00:00] FIX: 图片下载增加重试机制（最多3次），避免偶发网络超时导致整个任务失败；日志输出完整图片URL不再截断 (Files: src/xhs_agent/services/upload_service.py, src/xhs_agent/services/image_service.py, src/xhs_agent/services/goal_service.py)
